The Samba-Bugzilla – Bug 13016
LDB re-index should consider that keys could be binary or not start with DN
Last modified: 2017-09-15 23:40:18 UTC
Home
|
New
|
Browse
|
Search
|
[?]
|
Reports
|
Requests
|
Help
|
New Account
|
Log In
[x]
|
Forgot Password
Login:
[x]
Bug 13016
-
LDB re-index should consider that keys could be binary or not start with DN
Summary:
LDB re-index should consider that keys could be binary or not start with DN
Status
:
RESOLVED FIXED
Alias:
None
Product:
Samba 4.1 and newer
Classification:
Unclassified
Component:
AD: LDB/DSDB/SAMDB (
show other bugs
)
Version:
4.7.0rc5
Hardware:
All All
I
mportance
:
P5 normal
(
vote
)
Target Milestone:
---
Assignee:
Andrew Bartlett
QA Contact:
Samba QA Contact
URL:
Keywords:
Depends on:
13023
Blocks:
Show dependency
tree
/
graph
Reported:
2017-09-06 03:03 UTC by
Andrew Bartlett
Modified:
2017-09-15 23:40 UTC (
History
)
CC List:
0 users
See Also:
Attachments
Add an attachment
(proposed patch, testcase, etc.)
Note
You need to
log in
before you can comment on or make changes to this bug.
Description
Andrew Bartlett
2017-09-06 03:03:15 UTC
Newer index forms may not be string based, and may not be a DN
Comment 1
Stefan Metzmacher
2017-09-15 23:38:53 UTC
Pushed to v4-7-test
Format For Printing
-
XML
-
Clone This Bug
-
Top of page